# Funda

laab1/: Makefile  main.c  operations.c  operations.h  test.sh  uwu
laab2/: Makefile  main.c  prime  prime.c  prime.h  test_prime.c  tests
laab3/: Makefile  main.c  operations.c  operations.h  program  test.sh
laab4/: constants  constants.c  main.c  makefile
laab5/: file_processor  file_processor.c  file_processor.h  input.txt  main.c  makefile  out_input.txt
pack_2/lab1/: CMakeLists.txt  func.c  main.c
pack_2/lab2/: Makefile  f2unc.c  func.c  func.h  string_demo
pack_2/lab3/: CMakeLists.txt  Makefile  func.c  func.h  main.c  program
pack_2/lab4/: CMakeLists.txt  func.c  func.h  main.c
pack_2/lab5/: Makefile  func.c  func.h  input.txt  lab5  main.c  output.txt
pack_2/lab6/: input.txt  output.txt
